--- a/packages/components/base/source/0-base/2-generic/headline/_headline.scss
+++ b/packages/components/base/source/0-base/2-generic/headline/_headline.scss
@@ -1,5 +1,5 @@
+@use '@kickstartds/core/source/core/breakpoint';
 @use '../../1-tools/scss/helpers';
-@use '../../1-tools/scss/breakpoint';
 @use 'settings/base';
 
 /* critical:start */
