--- a/packages/components/base/source/0-base/3-objects/_grid.scss
+++ b/packages/components/base/source/0-base/3-objects/_grid.scss
@@ -1,5 +1,5 @@
+@use '@kickstartds/core/source/core/breakpoint';
 @use '../1-tools/scss/grid';
-@use '../1-tools/scss/breakpoint';
 
 .grid-container {
   /* critical:start */
