--- a/packages/components/base/source/0-base/3-objects/section/section.scss
+++ b/packages/components/base/source/0-base/3-objects/section/section.scss
@@ -1,6 +1,6 @@
+@use '@kickstartds/core/source/core/breakpoint';
 @use '../../1-tools/scss/grid';
 @use '../../1-tools/scss/sizes';
-@use '../../1-tools/scss/breakpoint';
 @use '../../1-tools/scss/anchor';
 @use '../../0-settings/selector';
 @use 'settings/base';
