--- a/packages/components/base/source/0-base/4-utilities/_hide.scss
+++ b/packages/components/base/source/0-base/4-utilities/_hide.scss
@@ -1,4 +1,4 @@
-@use '../1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use 'bourbon/core/bourbon';
 
 // Hide only visually, but have it available for screen readers
