--- a/packages/components/base/source/1-atoms/link/link.scss
+++ b/packages/components/base/source/1-atoms/link/link.scss
@@ -1,4 +1,4 @@
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use 'settings/base';
 
 /* critical:start */
