--- a/packages/components/base/source/1-atoms/loading/_loading-indicator.scss
+++ b/packages/components/base/source/1-atoms/loading/_loading-indicator.scss
@@ -2,7 +2,7 @@
  * # Loading Indicator
  */
 
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use 'settings/base';
 
 .loading-indicator {
