--- a/packages/components/base/source/2-molecules/collapsible-box/_collapsible-box.scss
+++ b/packages/components/base/source/2-molecules/collapsible-box/_collapsible-box.scss
@@ -1,5 +1,5 @@
 @use '../../0-base/1-tools/scss/details-reset';
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use '../../0-base/0-settings/selector';
 @use '../../0-base/1-tools/scss/anchor';
 @use 'bourbon/core/bourbon';
