--- a/packages/components/core/source/design-tokens/typography/_font-families.scss
+++ b/packages/components/core/source/design-tokens/typography/_font-families.scss
@@ -1,6 +1,6 @@
 @use 'sass:meta';
 @use 'sass:string';
-@use '../../../../../../node_modules/bourbon/core/bourbon';
+@use 'bourbon/core/bourbon';
 
 $display: bourbon.$font-stack-garamond !default;
 $copy: bourbon.$font-stack-helvetica !default;
