--- a/packages/components/base/source/0-base/1-tools/scss/_anchor.scss
+++ b/packages/components/base/source/0-base/1-tools/scss/_anchor.scss
@@ -1,4 +1,4 @@
-@use './breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use '../../0-settings/selector';
 @use 'settings/base';
 
@@ -9,9 +9,9 @@
     --rm-header-height: #{base.header__height(s)};
   }
 
-  @include breakpoint.media('≥nav-main') {
-    --rm-header-height: #{base.header__height(nav-main)};
-  }
+  // @include breakpoint.media('≥nav-main') {
+  //   --rm-header-height: #{base.header__height(nav-main)};
+  // }
 }
 
 @if base.$hide-meta-nav-on-scroll-s {
@@ -24,9 +24,9 @@
 
 @if base.$hide-meta-nav-on-scroll-nav-main {
   #{selector.$header--scrolling} {
-    @include breakpoint.media('≥nav-main') {
-      --rm-header-height: #{base.header__height(nav-main--scrolling)};
-    }
+    // @include breakpoint.media('≥nav-main') {
+    //   --rm-header-height: #{base.header__height(nav-main--scrolling)};
+    // }
   }
 }
 
