--- a/packages/components/base/source/1-atoms/form/_form.scss
+++ b/packages/components/base/source/1-atoms/form/_form.scss
@@ -1,4 +1,4 @@
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use '../../0-base/1-tools/scss/helpers';
 @use '../../0-base/1-tools/scss/anchor';
 @use 'settings/base';
