--- a/packages/components/base/source/1-atoms/scroll-to-top/_scroll-to-top.scss
+++ b/packages/components/base/source/1-atoms/scroll-to-top/_scroll-to-top.scss
@@ -1,5 +1,5 @@
 @use '../../0-base/1-tools/scss/helpers';
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use 'bourbon/core/bourbon';
 @use 'settings/base';
 @use 'settings/global';
