--- a/packages/components/base/source/1-atoms/table/_table.scss
+++ b/packages/components/base/source/1-atoms/table/_table.scss
@@ -1,4 +1,4 @@
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use '../../0-base/1-tools/scss/helpers';
 @use '../../0-base/0-settings/selector';
 @use 'settings/base';
