--- a/packages/components/base/source/1-atoms/tag-label/tag-label.scss
+++ b/packages/components/base/source/1-atoms/tag-label/tag-label.scss
@@ -1,5 +1,5 @@
 @use 'bourbon/core/bourbon';
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use '../../0-base/1-tools/scss/helpers';
 @use 'settings/base';
 @use 'sass:meta';
