--- a/packages/components/base/source/2-molecules/content-headline/content-headline.scss
+++ b/packages/components/base/source/2-molecules/content-headline/content-headline.scss
@@ -1,6 +1,6 @@
 @use '../../0-base/1-tools/scss/sizes';
 @use '../../0-base/1-tools/scss/helpers';
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use 'settings/base';
 
 .content-headline {
