--- a/packages/components/base/source/2-molecules/filter-area/_filter-area.scss
+++ b/packages/components/base/source/2-molecules/filter-area/_filter-area.scss
@@ -1,5 +1,5 @@
 @use '../../0-base/1-tools/scss/details-reset';
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use 'settings/base';
 
 .filter-area {
