--- a/packages/components/base/source/2-molecules/nav/nav-content-menu/_nav-content-menu.scss
+++ b/packages/components/base/source/2-molecules/nav/nav-content-menu/_nav-content-menu.scss
@@ -1,6 +1,6 @@
 @use '../../../0-base/1-tools/scss/details-reset';
 @use '../../../0-base/1-tools/scss/helpers';
-@use '../../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use 'bourbon/core/bourbon';
 @use 'settings/base';
 @use 'settings/global';
