--- a/packages/components/base/source/2-molecules/nav/nav-lang/_nav-lang.scss
+++ b/packages/components/base/source/2-molecules/nav/nav-lang/_nav-lang.scss
@@ -1,5 +1,5 @@
 @use '../../../0-base/1-tools/scss/helpers';
-@use '../../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use '../../../0-base/0-settings/selector';
 @use 'bourbon/core/bourbon';
 @use 'settings/base';
@@ -68,11 +68,11 @@
     display: none;
     /* critical:end */
 
-    @include breakpoint.media('≥nav-main') {
-      /* critical:start */
-      display: block;
-      /* critical:end */
-    }
+    // @include breakpoint.media('≥nav-main') {
+    //   /* critical:start */
+    //   display: block;
+    //   /* critical:end */
+    // }
 
     .dropdown {
       details[open] {
@@ -133,11 +133,11 @@
       }
     }
 
-    @include breakpoint.media('≥nav-main') {
-      /* critical:start */
-      display: none;
-      /* critical:end */
-    }
+    // @include breakpoint.media('≥nav-main') {
+    //   /* critical:start */
+    //   display: none;
+    //   /* critical:end */
+    // }
 
     .dropdown {
       &__toggle {
