--- a/packages/components/base/source/2-molecules/notification/_notification.extends.scss
+++ b/packages/components/base/source/2-molecules/notification/_notification.extends.scss
@@ -1,5 +1,5 @@
 @use '../../0-base/1-tools/scss/contrast';
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use 'settings/base';
 
 %notification {
