--- a/packages/components/base/source/2-molecules/overlay/overlay/_overlay.scss
+++ b/packages/components/base/source/2-molecules/overlay/overlay/_overlay.scss
@@ -1,6 +1,6 @@
 @use '../../../0-base/1-tools/scss/grid';
 @use '../../../0-base/1-tools/scss/sizes';
-@use '../../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use 'bourbon/core/bourbon';
 @use 'settings/base';
 @use 'settings/global';
