--- a/packages/components/base/source/2-molecules/slider/slider.scss
+++ b/packages/components/base/source/2-molecules/slider/slider.scss
@@ -1,4 +1,4 @@
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 
 @use './glide.core';
 @use './slider-arrows/slider-arrows';
