--- a/packages/components/base/source/3-organisms/content-navigation/_content-navigation.scss
+++ b/packages/components/base/source/3-organisms/content-navigation/_content-navigation.scss
@@ -1,5 +1,5 @@
 @use '../../0-base/1-tools/scss/grid';
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use '../../0-base/0-settings/selector';
 @use 'settings/base';
 @use 'settings/global';
