--- a/packages/components/base/source/3-organisms/footer/_nav-footer.scss
+++ b/packages/components/base/source/3-organisms/footer/_nav-footer.scss
@@ -1,5 +1,5 @@
 @use '../../0-base/1-tools/scss/helpers';
-@use '../../0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/core/source/core/breakpoint';
 @use 'settings/base';
 
 .nav-footer {
