refactor: create scss vars for button & quote

--- a/packages/components/base/source/1-atoms/button/button/button.scss
+++ b/packages/components/base/source/1-atoms/button/button/button.scss
@@ -1,80 +1,12 @@
-@use '@kickstartds/core/source/core/breakpoint';
-@use '../../../0-base/1-tools/scss/button';
+@use 'sass:meta';
 @use 'bourbon/core/bourbon';
-@use 'settings/base';
+@use '@kickstartds/core/source/core/breakpoint';
+@use '@kickstartds/core/source/core/custom-properties';
+@use '../../../0-base/1-tools/scss/button';
+@use './button-vars';
 
-:root {
-  /* critical:start */
-  --c-button--padding: 0.4rem 1.3rem 0.35rem;
-  --c-button--border-color: transparent;
-  --c-button--border-width: 0;
-  --c-button--border-radius: 3px;
-  --c-button--color: var(--color-primary);
-  --c-button--background-color: transparent;
-  --c-button-transform-active: scale(0.95);
-  /* critical:end */
-}
-
-.button {
-  /* critical:start */
-  &--clear {
-    --c-button--color-hover: var(--color-primary-darker-1);
-    --c-button--color-active: var(--color-primary-darker-2);
-    --c-button--background-color-hover: var(--color-primary-alpha-2);
-    --c-button--background-color-active: var(--color-primary-alpha-3);
-    --c-button_fill-animation--background-color-hover: var(--c-button--color);
-    --c-button_fill-animation--color-hover: var(--color-white);
-  }
-
-  &--clear-inverted {
-    --c-button--color: var(--color-white);
-    --c-button--background-color-hover: var(--color-white-alpha-2);
-    --c-button--background-color-active: var(--color-white-alpha-3);
-    --c-button_fill-animation--background-color-hover: var(--c-button--color);
-    --c-button_fill-animation--color-hover: var(--color-primary);
-  }
-
-  &--solid {
-    --c-button--color: var(--color-white);
-    --c-button--background-color: var(--color-primary);
-    --c-button--background-color-hover: var(--color-primary-lighter-2);
-    --c-button--background-color-active: var(--color-primary-lighter-3);
-    --c-button_fill-animation--background-color-hover: var(--c-button--color);
-    --c-button_fill-animation--color-hover: var(--color-primary);
-  }
-
-  &--solid-inverted {
-    --c-button--color: var(--color-primary-darker-1);
-    --c-button--color-hover: var(--color-primary-darker-2);
-    --c-button--background-color: var(--color-white);
-    --c-button--background-color-hover: var(--color-primary-lighter-8);
-    --c-button--background-color-active: var(--color-primary-lighter-7);
-    --c-button_fill-animation--background-color-hover: var(--c-button--color);
-    --c-button_fill-animation--color-hover: var(--color-white);
-  }
-
-  &--outline {
-    --c-button--border-width: 1px;
-    --c-button--border-color: var(--color-primary);
-    --c-button--color-hover: var(--color-primary-darker-1);
-    --c-button--color-active: var(--color-primary-darker-2);
-    --c-button--background-color-hover: var(--color-primary-alpha-2);
-    --c-button--background-color-active: var(--color-primary-alpha-3);
-    --c-button_fill-animation--background-color-hover: var(--c-button--color);
-    --c-button_fill-animation--color-hover: var(--color-white);
-  }
-
-  &--outline-inverted {
-    --c-button--border-width: 1px;
-    --c-button--color: var(--color-white);
-    --c-button--border-color: var(--c-button--color);
-    --c-button--background-color-hover: var(--color-white-alpha-2);
-    --c-button--background-color-active: var(--color-white-alpha-3);
-    --c-button_fill-animation--background-color-hover: var(--c-button--color);
-    --c-button_fill-animation--color-hover: var(--color-primary);
-  }
-  /* critical:end */
-}
+$vars: meta.module-variables(button-vars);
+@include custom-properties.styles($vars, true);
 
 .button {
   /* critical:start */
@@ -137,7 +69,7 @@
       --c-button--border-color-active,
       var(--c-button--border-color-hover, var(--c-button--border-color))
     );
-    transform: var(--c-button-transform-active);
+    transform: var(--c-button--transform-active);
   }
 
   &:disabled {
