--- a/packages/components/base/source/0-base/global/base.scss
+++ b/packages/components/base/source/0-base/global/base.scss
@@ -2,6 +2,7 @@
 
 @use '../2-generic/polyfills/focus-visible' as *;
 @use '../2-generic/root/root' as *;
+@use '../2-generic/button/button' as *;
 @use '../2-generic/media/image' as *;
 @use '../2-generic/media/video' as *;
 @use '../2-generic/iframe/iframe' as *;
