--- a/packages/components/base/source/1-atoms/tag-label/tag-label.scss
+++ b/packages/components/base/source/1-atoms/tag-label/tag-label.scss
@@ -1,25 +1,22 @@
+@use 'sass:meta';
 @use 'bourbon/core/bourbon';
 @use '@kickstartds/core/source/core/breakpoint';
-@use '../../0-base/1-tools/scss/helpers';
-@use 'settings/base';
-@use 'sass:meta';
+@use '@kickstartds/core/source/core/custom-properties';
+@use './tag-label-vars';
 
-.tag-label {
-  display: flex;
+$vars: meta.module-variables(tag-label-vars);
+@include custom-properties.styles($vars, true);
+
+.c-tag-label {
+  display: inline-flex;
   align-items: center;
   text-decoration: none;
-  background-color: base.$tag-label__background-color;
-  border: base.$tag-label__border;
-  color: base.$tag-label__color;
-
-  @each $size, $props in base.$tag-label__sizes {
-    &--#{$size} {
-      font-size: map-get($props, font-size);
-      line-height: map-get($props, line-height);
-      font-weight: helpers.get-font-weight(map-get($props, font-weight));
-      border-radius: map-get($props, border-radius);
-    }
-  }
+  background-color: var(--c-tag-label--background-color);
+  border: var(--tag-label--border);
+  color: var(--c-tag-label--color);
+  font: var(--c-tag-label--font);
+  font-weight: var(--c-tag-label--font-weight);
+  border-radius: var(--c-tag-label--border-radius);
 
   @include breakpoint.media('print') {
     background-color: transparent;
@@ -29,20 +26,15 @@
   &__content {
     border-radius: inherit;
     transition: 0.3s;
-
-    @each $size, $props in base.$tag-label__sizes {
-      .tag-label--#{$size} & {
-        padding: map-get($props, vertical-padding)
-          map-get($props, horizontal-padding);
-      }
-    }
+    padding: var(--c-tag-label--vertical-padding)
+      var(--c-tag-label--horizontal-padding);
 
     @at-root {
       a#{&} {
         &:hover,
         &:focus {
-          background-color: base.$tag-label__hover-background-color;
-          color: base.$tag-label__hover-color;
+          background-color: var(--c-tag-label--background-color-hover);
+          color: var(--c-tag-label--color-hover);
         }
       }
     }
@@ -51,31 +43,18 @@
   &__remove-btn {
     line-height: 0;
     border-radius: inherit;
-
-    @each $size, $props in base.$tag-label__sizes {
-      $icon: map-get($props, icon);
-
-      .tag-label--#{$size} & {
-        margin-left: map-get($icon, margin-left);
-        padding: map-get($props, vertical-padding)
-          map-get($icon, horizontal-padding);
-      }
-    }
+    margin-left: var(--c-tag-label_icon--margin-left);
+    padding: var(--c-tag-label--vertical-padding)
+      var(--c-tag-label_icon--horizontal-padding);
 
     &:hover,
     &:focus {
-      background-color: base.$tag-label__hover-background-color;
-      color: base.$tag-label__hover-color;
+      background-color: var(--c-tag-label--background-color-hover);
+      color: var(--c-tag-label--color-hover);
     }
 
     .icon {
-      @each $size, $props in base.$tag-label__sizes {
-        $icon: map-get($props, icon);
-
-        .tag-label--#{$size} & {
-          @include bourbon.size(map-get($icon, size));
-        }
-      }
+      @include bourbon.size(var(--c-tag-label_icon--size));
     }
   }
 }
