feat: add visual component tokens

--- a/legacy-instance/settings/global/_sizes.scss
+++ b/legacy-instance/settings/global/_sizes.scss
@@ -1,12 +1,15 @@
 
-/// ## Global Padding
+// --spacing-m
 $padding: 0.666rem !default;
 $padding-s: 1.3rem !default;
 $padding-m: 2rem !default;
 
+// --spacing-l
 $vertical-padding: 2rem !default;
 $vertical-padding-s: 3rem !default;
 $vertical-padding-m: 4rem !default;
+
+// --spacing-s
 $vertical-padding-small: 0.5rem !default;
 $vertical-padding-small-s: 1rem !default;
 $vertical-padding-small-m: 2rem !default;
